--- a/components/sass/modules/_intro.scss
+++ b/components/sass/modules/_intro.scss
@@ -1,6 +1,10 @@
 header {
 	.fullheight {
 		@include backImg('../images/hotel/splash_hotelphoto.jpg');
+		
+		@include display-flex();
+		@include align-items(center);
+		@include justify-content(center);
 	}
 
 	.hgroup {
