--- a/components/sass/modules/_rooms.scss
+++ b/components/sass/modules/_rooms.scss
@@ -11,14 +11,19 @@
         padding: 200px 0;
         @include container(100%);
         @include pad(1, 1);
+
+        @include display-flex();
+        @include align-items(center);
+        @include justify-content(center);
+
         @include breakpoint($small) {
-            @include pad(7, 1);
+            @include pad(7,1);
         } //breakpoint
         .content {
             @include border-radius(10px);
             background: rgba($light, .8);
             padding: 20px;
-            margin: 200px 0;
+            // margin: 200px 0;
             h1 {
                 color: $red;
             } //h1
