--- a/components/sass/_mixins.scss
+++ b/components/sass/_mixins.scss
@@ -1,5 +1,17 @@
-@mixin backImg($image) {	
-  background: url($image) no-repeat center center fixed; 
+@mixin backImg( $image,
+			  	$grDir: to bottom,
+			  	$opStart: 0,
+				$opEnd: 0,
+				$bgPos: center center
+) {	
+  background: linear-gradient(
+    $grDir,
+    rgba(0,0,0, $opStart),
+    rgba(0,0,0, $opEnd)
+    ),
+  url($image); 
+  background-repeat: no-repeat;
+  background-position: $bgPos;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
