--- a/components/sass/modules/_nav.scss
+++ b/components/sass/modules/_nav.scss
@@ -2,6 +2,7 @@ header #nav {
 	@include clearfix;
 	@include background-image(linear-gradient(top, lighten($navBacground, 10), $navBacground));
 	width: 100%;
+	z-index: 100;
 
 	.navbar {
 		@include container;
@@ -71,7 +72,12 @@ header #nav {
 						padding-left: 10px;
 						&.icon {background-image: none}
 					}//breakpoint
-				}
+
+					&.active {
+						background-color: $red;
+						color: $light;
+					}
+				}//a
 			}//li
 		}//ul
 	} //navbar
